2009-02-21  vadim  <vadim@vk.crocodile.org>

	* SSHUnx.cpp (SSHUnx::SSHUnx): New feature: built-in installer can
	now enter sudo password. There is no need to configure firewall
	management account for password-less sudo access anymore.

2009-02-19  vadim  <vadim@vk.crocodile.org>

	* FirewallInstaller.cpp (FirewallInstaller::getDestinationDir):
	fixed bug #2618772 ""test install" option does not work". If "test
	install" checkbox was checked in the installer options dialog, the
	program copied file to directory /etc/fw on the firewall but tried
	to find it in /etc/fw/tmp to run.

	* FirewallInstaller.cpp (FirewallInstaller::packSCPArgs): fix bug
	#2618686 "built-in installer can not handle ipv6 management
	address". Built-in installer did not properly for scp and ssh
	command like when it had to use IPv6 address to communicate with
	firewall.

2009-02-17  vadim  <vadim@vk.crocodile.org>

	* Management.cpp (Management::fromXML): (change in libfwbuilder):
	fixed bug #2609796 "internal object Management does not accept
	ipv6 address". Class Management should accept ipv6 address. The
	problem was that if an interface of the firewall had only ipv6
	address and was marked as "management" interface, saving such
	configuration to .fwb file created broken data file that could not
	be loaded back. The error was:

	The program encountered error trying to load data file.
	The file has not been loaded. Error:
	Exception: Invalid IP address: 'aaaa:bbbb:cccc::1'
	XML element : Management

	where aaaa:bbbb:cccc: is ipv6 address.


2009-02-13  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (finalizeChain::processNext): fixed bug
	#2597959 "rules disappear in ipv6 policy unless ipv4 forwarding is
	on". Example: IPv6 policy, rule where fw object and internal
	network are in source, destination is "any". If option "assume
	firewall is part of any" was turned off and ipv6 forwarding was on
	but ipv4 forwarding was off, this rule did not yield any iptables